<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/login_screen_container_linearlayout"
    tools:context="vn.edu.uit.tmlnghia.shopping.Activities.LoginActivity">

    <LinearLayout style="@style/login_logo_container_linearlayout">

        <TextView
            style="@style/login_logo_textview"
            android:text="@string/app_name" />

        <ImageView
            style="@style/login_logo_imageview"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/login_id_text_input_layout">

        <EditText
            android:id="@+id/login_id"
            style="@style/login_id_edit_text"
            android:hint="@string/login_mail_or_phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/login_password_text_input_layout">

        <EditText
            android:id="@+id/login_password"
            style="@style/login_password_edit_text"
            android:hint="@string/signup_password" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/login_button"
        style="@style/login_signup_button"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgot_password"
        style="@style/login_screen_forget_password_textview"
        android:text="@string/forgot_password" />

    <LinearLayout style="@style/login_screen_dont_have_account_linearlayout">

        <TextView
            style="@style/login_screen_dont_have_account_textview"
            android:text="@string/dont_have_account" />

        <TextView
            android:id="@+id/sign_up_button"
            style="@style/login_screen_signup_textview"
            android:text="@string/sign_up" />

    </LinearLayout>

    <TextView
        style="@style/login_screen_login_with"
        android:text="@string/login_with" />

    <LinearLayout style="@style/login_screen_other_source_linearlayout">

        <TextView
            android:id="@+id/facebook"
            style="@style/login_screen_facebook"
            android:text="@string/facebook" />

        <TextView
            android:id="@+id/zalo"
            style="@style/login_screen_zalo"
            android:text="@string/zalo" />

        <TextView
            android:id="@+id/google"
            style="@style/login_screen_google"
            android:text="@string/google" />

    </LinearLayout>
</LinearLayout>
