<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_navigation_home_title"/>

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_category_black_24dp"
        android:title="@string/bottom_navigation_category_title"/>

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bottom_navigation_search_title"/>

    <item
        android:id="@+id/nav_account_information"
        android:icon="@drawable/ic_account_information_black_24dp"
        android:title="@string/bottom_navigation_account_information_title"/>

</menu>