<?xml version="1.0" encoding="utf-8"?>

<!-- TODO Giao diện dialog báo lỗi kết nối -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/part_color_white"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="20dp"
    android:paddingEnd="30dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/connection_error"
        android:textColor="@color/error_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/error_detail"
        android:textColor="@color/text_color_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text" />


    <TextView
        android:id="@+id/try_again_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button_custom"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:textColor="@color/text_color_white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_detail" />


</androidx.constraintlayout.widget.ConstraintLayout>